[[bin]]
name = "fraiseql-cli"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0"
# SQL Server connection pool (optional, for sqlserver feature)
bb8 = {version = "0.8", optional = true}
bb8-tiberius = {version = "0.15", optional = true}
# CLI framework
clap = {version = "4.5", features = ["derive", "cargo", "color", "suggestions"]}
# Database connection (for introspect/validate commands)
deadpool-postgres = {workspace = true}
# MySQL / SQLite connection (optional, for mysql/sqlite features)
sqlx = {workspace = true, optional = true}
# SQL Server TDS driver (optional, for sqlserver feature)
tiberius = {version = "0.12", default-features = false, features = ["tds73", "native-tls"], optional = true}
# Workspace dependencies
fraiseql-codegen = {workspace = true}
fraiseql-core = {workspace = true, features = ["postgres", "schema-lint"]}
# The change-log `duration_calc_version` marker — the single source of truth the
# `perf` command (#392) gates regression analysis on (only the const `changelog`
# module is used here, not the database adapters).
fraiseql-db = {workspace = true}
# The change-log contract column set (the single source of truth the doctor
# `changelog-contract` drift check compares a live table against — only the
# const `migrations` module is used here, not the observer runtime).
fraiseql-observers = {workspace = true}
fraiseql-server = {workspace = true, optional = true, features = ["cli"]}
axum = {workspace = true, optional = true}
glob = "0.3"
hex = {workspace = true}
reqwest = {workspace = true}
# Serialization
indexmap = {workspace = true}
# File watching (for serve command)
notify = "7.0"
regex = {workspace = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = {workspace = true}
# Async runtime
tokio = {workspace = true}
tokio-postgres = {workspace = true, features = ["with-serde_json-1"]}
toml = "0.8"
# Logging
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "ansi"]}
# Multi-file schema loading
walkdir = "2"
# Temporary directory for --check-migrations DDL emit
tempfile = "3.25"

[dev-dependencies]
assert_cmd = "2"
fraiseql-test-support = {path = "../fraiseql-test-support"}
http-body-util = "0.1"
insta = {version = "1", features = ["yaml"]}
predicates = "3"
temp-env = {workspace = true}
tempfile = "3.25"
tower = {workspace = true}

[features]
default = []
federation = ["fraiseql-core/federation"]
# Database adapter features. The `fraiseql-server?/mysql` syntax cascades into
# the server crate iff `run-server` is also enabled — required so that
# `fraiseql run mysql://…` dispatches into the matching adapter (#327).
mysql = ["fraiseql-core/mysql", "dep:sqlx", "sqlx/mysql", "fraiseql-server?/mysql"]
sqlite = ["fraiseql-core/sqlite", "dep:sqlx", "sqlx/sqlite", "fraiseql-server?/sqlite"]
sqlserver = [
    "fraiseql-core/sqlserver",
    "dep:bb8",
    "dep:bb8-tiberius",
    "dep:tiberius",
    "fraiseql-server?/sqlserver",
]
run-server = ["dep:fraiseql-server", "dep:axum"]
# Gate for the `--against-db` integration tests (#397/#409). The tests self-skip
# when no `DATABASE_URL` is set, so enabling this under `--all-features` in a
# DB-free leg is safe; it only marks the live-PostgreSQL test surface.
test-postgres = []

[lints]
workspace = true

[package]
description = "CLI tools for FraiseQL v2 - Schema compilation and development utilities"
name = "fraiseql-cli"
readme = "README.md"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[test]]
name = "cli_federation_validation"
required-features = ["federation"]

[[test]]
name = "federation_cli_advanced"
required-features = ["federation"]

[[test]]
name = "federation_cli_compose"
required-features = ["federation"]

[[test]]
name = "federation_composition_advanced"
required-features = ["federation"]

[[test]]
name = "federation_composition_validator"
required-features = ["federation"]

[[test]]
name = "federation_cross_subgraph_validation"
required-features = ["federation"]

[[test]]
name = "federation_cross_subgraph_validation_advanced"
required-features = ["federation"]

[[test]]
name = "federation_edge_cases"
required-features = ["federation"]

[[test]]
name = "federation_graph_tests"
required-features = ["federation"]

[[test]]
name = "federation_validation"
required-features = ["federation"]

[package.metadata.binstall]
bin-dir = "fraiseql{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/v{ version }/fraiseql-{ target }.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
