[dependencies]
fraiseql-core = {workspace = true}
fraiseql-error = {workspace = true}
hex = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}

[dev-dependencies]
tempfile = {workspace = true}

[lints]
workspace = true

[package]
description = "Code generation: typed client artefacts from FraiseQL compiled schemas"
name = "fraiseql-codegen"
readme = "README.md"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
