[[bench]]
harness = false
name = "adapter_comparison"
required-features = ["postgres"]

[[bench]]
harness = false
name = "full_pipeline_comparison"
required-features = ["postgres"]

[[bench]]
harness = false
name = "sql_projection_benchmark"

[[bench]]
harness = false
name = "federation_bench"

[lints]
workspace = true

[dependencies]
fraiseql-error = {workspace = true}
# Database abstraction layer (adapters, collation, introspector, filters)
fraiseql-db = {workspace = true, default-features = false}
# Federation support (Apollo Federation v2)
fraiseql-federation = {workspace = true}
# Arrow Flight integration (optional)
# Note: fraiseql-arrow depends on fraiseql-core, not the other way around
# to avoid circular dependency. fraiseql-arrow provides the Flight server
# and concrete Arrow conversion implementations.
arrow = {version = "57", optional = true}
arrow-array = {version = "57", optional = true}
base64 = {workspace = true}
# Utilities
bytes = {workspace = true}
chrono = {workspace = true}
dashmap = {workspace = true}
deadpool = {workspace = true}
futures = {workspace = true}
indexmap = {workspace = true}
# GraphQL
graphql-parser = {workspace = true}
hex = {workspace = true}
hmac = {workspace = true}
itertools = {workspace = true}
jsonwebtoken = {workspace = true}
linked-hash-map = {workspace = true}
lru = {workspace = true}
parking_lot = {workspace = true}
rand = {workspace = true}
# Kafka (optional)
rdkafka = {workspace = true, optional = true}
# Redis APQ backend (optional)
redis = {version = "0.28", features = ["aio", "tokio-comp", "connection-manager"], optional = true}
regex = {workspace = true}
reqwest = {workspace = true}
# Workspace dependencies
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
# Database - PostgreSQL (kept for non-db modules: audit, federation, security)
tokio-postgres = {workspace = true, features = ["with-serde_json-1"]}
tokio-util = "0.7"
toml = {workspace = true}
# Logging
tracing = {workspace = true}
uuid = {workspace = true}
zeroize = {version = "1.8", features = ["std"]}
async-trait.workspace = true
deadpool-postgres.workspace = true

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}
fraiseql-test-utils = {path = "../fraiseql-test-utils"}
insta = {version = "1.38", features = ["yaml"]}
proptest = {workspace = true}
serial_test = "3"
temp-env = {workspace = true}
tempfile = {workspace = true}
testcontainers = {version = "0.26", features = ["watchdog"]}
testcontainers-modules = {version = "0.14", features = ["postgres", "mysql"]}
tokio-test = "0.4"

[features]
# Arrow Flight integration for high-performance analytics
# Provides arrow_executor module for Arrow RecordBatch conversion.
# For Arrow Flight server, use fraiseql-arrow crate which depends on fraiseql-core[arrow].
arrow = ["dep:arrow", "dep:arrow-array"]
default = ["postgres", "rich-filters"]
# Schema linting: anti-pattern detection, cost analysis, quality scoring.
# Only needed by fraiseql-cli's `lint` command; not compiled into the server binary.
schema-lint = []
kafka = ["rdkafka"]
mysql = ["fraiseql-db/mysql"]
postgres = ["fraiseql-db/postgres"]
redis-apq = ["redis"]
# Rich type filters (Email, VIN, IBAN, CountryCode, etc.)
# Includes specialized filter operators for 44 rich scalar types
rich-filters = ["fraiseql-db/rich-filters"]
sqlite = ["fraiseql-db/sqlite"]
sqlserver = ["fraiseql-db/sqlserver"]
# Run with: cargo test --features test-mysql -- --test-threads=1
test-mysql = ["mysql", "fraiseql-db/test-mysql"]
# Test features - enable database integration tests
# Run with: cargo test --features test-postgres -- --test-threads=1
test-postgres = ["fraiseql-db/test-postgres"]
# Run with: cargo test --features test-sqlserver -- --test-threads=1
test-sqlserver = ["sqlserver", "fraiseql-db/test-sqlserver"]
wire-backend = ["fraiseql-db/wire-backend"]
# Expose ManualClock and other test helpers for dependent crates
test-utils = []

[package]
description = "Core execution engine for FraiseQL v2 - Compiled GraphQL over SQL"
name = "fraiseql-core"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
