[[bench]]
harness = false
name = "graphql_parse"

[[bench]]
harness = false
name = "cache"

[[bench]]
harness = false
name = "adapter_comparison"
required-features = ["postgres"]

[[bench]]
harness = false
name = "full_pipeline_comparison"
required-features = ["postgres"]

[[bench]]
harness = false
name = "design_analysis"
required-features = ["schema-lint"]

[[bench]]
harness = false
name = "sql_projection_benchmark"

[[bench]]
harness = false
name = "cache_concurrent_bench"

[[bench]]
harness = false
name = "federation_bench"
required-features = ["federation"]

[[bench]]
harness = true
name = "memory_profile"
required-features = ["dhat-heap"]

[dependencies]
ahash = {workspace = true}
# Arrow Flight integration (optional)
# Note: fraiseql-arrow depends on fraiseql-core, not the other way around
# to avoid circular dependency. fraiseql-arrow provides the Flight server
# and concrete Arrow conversion implementations.
arrow = {version = "57", optional = true}
arrow-array = {version = "57", optional = true}
base64 = {workspace = true}
# Utilities
bytes = {workspace = true}
chrono = {workspace = true}
dashmap = {workspace = true}
deadpool = {workspace = true}
dhat = {version = "0.3", optional = true}
# Database abstraction layer (adapters, collation, introspector, filters)
fraiseql-db = {workspace = true, default-features = false}
fraiseql-error = {workspace = true}
# Federation support (Apollo Federation v2)
fraiseql-federation = {workspace = true, optional = true}
futures = {workspace = true}
# GraphQL
graphql-parser = {workspace = true}
hex = {workspace = true}
hmac = {workspace = true}
hostname = {version = "0.4", optional = true}
indexmap = {workspace = true}
itertools = {workspace = true}
jsonwebtoken = {workspace = true}
linked-hash-map = {workspace = true}
lru = {workspace = true}
moka = {workspace = true}
parking_lot = {workspace = true}
rand = {workspace = true}
# Kafka (optional)
rdkafka = {workspace = true, optional = true}
# Redis APQ backend (optional)
redis = {version = "1", features = ["aio", "tokio-comp", "connection-manager"], optional = true}
regex = {workspace = true}
reqwest = {workspace = true}
# Workspace dependencies
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
subtle = "2.5"  # Constant-time comparison for hash verification (APQ)
thiserror = {workspace = true}
tokio = {workspace = true}
# Database - PostgreSQL (kept for non-db modules: audit, federation, security)
tokio-postgres = {workspace = true, features = ["with-serde_json-1"]}
tokio-util = "0.7"
toml = {workspace = true}
# Logging
tracing = {workspace = true}
uuid = {workspace = true}
zeroize = {version = "1.8", features = ["std"]}
async-trait.workspace = true
deadpool-postgres.workspace = true

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}
moka = {workspace = true}
fraiseql-test-utils = {path = "../fraiseql-test-utils"}
fraiseql-wire = {workspace = true}
insta = {workspace = true}
mutants = "0.0.4"
proptest = {workspace = true}
serial_test = "3"
sqlx = {workspace = true, features = ["mysql"]}
temp-env = {workspace = true}
tempfile = {workspace = true}
testcontainers = {version = "0.26", features = ["watchdog"]}
testcontainers-modules = {version = "0.14", features = ["postgres", "mysql"]}
tokio-test = "0.4"
wiremock = "0.6"

[features]
# Arrow Flight integration for high-performance analytics
# Provides arrow_executor module for Arrow RecordBatch conversion.
# For Arrow Flight server, use fraiseql-arrow crate which depends on fraiseql-core[arrow].
arrow = ["dep:arrow", "dep:arrow-array"]
# Audit log export: RFC 5424 syslog sink for audit entries.
audit-syslog = ["dep:hostname"]
# Audit log export: HTTPS webhook sink for audit entries.
audit-webhook = []
default = ["postgres", "rich-filters"]
dhat-heap = ["dhat"]
federation = ["dep:fraiseql-federation"]
grpc = ["fraiseql-db/grpc"]
kafka = ["rdkafka"]
mysql = ["fraiseql-db/mysql"]
postgres = ["fraiseql-db/postgres"]
redis-apq = ["redis"]
# JWT replay prevention via Redis SET NX (requires a Redis instance).
# Enables RedisReplayCache for distributed jti replay detection.
jwt-replay = ["redis"]
# Rich type filters (Email, VIN, IBAN, CountryCode, etc.)
# Includes specialized filter operators for 44 rich scalar types
rich-filters = ["fraiseql-db/rich-filters"]
# Schema linting: anti-pattern detection, cost analysis, quality scoring.
# Only needed by fraiseql-cli's `lint` command; not compiled into the server binary.
schema-lint = []
sqlite = ["fraiseql-db/sqlite"]
sqlserver = ["fraiseql-db/sqlserver"]
# Run with: cargo test --features test-mysql -- --test-threads=1
test-mysql = ["mysql", "fraiseql-db/test-mysql"]
# Test features - enable database integration tests
# Run with: cargo test --features test-postgres -- --test-threads=1
test-postgres = ["fraiseql-db/test-postgres"]
# Run with: cargo test --features test-sqlserver -- --test-threads=1
test-sqlserver = ["sqlserver", "fraiseql-db/test-sqlserver"]
# Expose ManualClock and other test helpers for dependent crates
test-utils = []
wire-backend = ["fraiseql-db/wire-backend"]

[[test]]
name = "federation"
required-features = ["federation"]

[[test]]
name = "federation_compliance"
required-features = ["federation"]

[[test]]
name = "federation_composition_validation"
required-features = ["federation"]

[[test]]
name = "federation_dependency_graph"
required-features = ["federation"]

[[test]]
name = "federation_directives"
required-features = ["federation"]

[[test]]
name = "federation_entity_resolver"
required-features = ["federation"]

[[test]]
name = "federation_field_directives"
required-features = ["federation"]

[[test]]
name = "federation_http_requires_runtime"
required-features = ["federation"]

[[test]]
name = "federation_multi_subgraph"
required-features = ["federation"]

[[test]]
name = "federation_mutation_http"
required-features = ["federation"]

[[test]]
name = "federation_observability_integration"
required-features = ["federation"]

[[test]]
name = "federation_observability_perf"
required-features = ["federation"]

[[test]]
name = "federation_provides_enforcement"
required-features = ["federation"]

[[test]]
name = "federation_requires_provides_enforcement"
required-features = ["federation"]

[[test]]
name = "federation_saga_observability"
required-features = ["federation"]

[[test]]
name = "federation_saga_real"
required-features = ["federation"]

[[test]]
name = "federation_scenarios"
required-features = ["federation"]

[[test]]
name = "e2e_cross_database_chain"
required-features = ["federation"]

[[test]]
name = "e2e_python_authoring"
required-features = ["federation"]

[[test]]
name = "e2e_typescript_authoring"
required-features = ["federation"]

[lints]
workspace = true

[package]
description = "Core execution engine for FraiseQL v2 - Compiled GraphQL over SQL"
name = "fraiseql-core"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
