[dependencies]
# Async runtime
async-trait = {workspace = true}
# Database — SQL Server (optional)
bb8 = {version = "0.8", optional = true}
bb8-tiberius = {version = "0.15", optional = true}
bytes = {workspace = true}
chrono = {workspace = true}
dashmap = {workspace = true}
deadpool = {workspace = true}
deadpool-postgres = {workspace = true}
# Error types
fraiseql-error = {workspace = true}
# Wire protocol (optional)
fraiseql-wire = {workspace = true, optional = true}
futures = {workspace = true}
regex = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
# Database — MySQL/SQLite (via sqlx, optional)
sqlx = {version = "0.8", features = ["runtime-tokio", "json"], optional = true}
thiserror = {workspace = true}
tiberius = {version = "0.12", default-features = false, features = ["tds73", "native-tls"], optional = true}
tokio = {workspace = true}
# Database — PostgreSQL
tokio-postgres = {workspace = true, features = ["with-serde_json-1"]}
tokio-util = "0.7"
tracing = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
proptest = {workspace = true}

[features]
default = ["postgres"]
mysql = ["sqlx/mysql"]
postgres = []
# Rich type filters (Email, VIN, IBAN, CountryCode, etc.)
rich-filters = []
sqlite = ["sqlx/sqlite"]
sqlserver = ["tiberius", "bb8", "bb8-tiberius"]
test-mysql = ["mysql"]
# Integration test features
test-postgres = []
test-sqlserver = ["sqlserver"]
wire-backend = ["fraiseql-wire"]

[lints]
workspace = true

[package]
description = "Database abstraction layer for FraiseQL v2"
name = "fraiseql-db"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
