[dependencies]
# axum is optional: only needed when fraiseql-error is used as an HTTP layer.
# Crates that expose HTTP handlers (e.g. fraiseql-server) should enable the
# `axum-compat` feature. Pure logic crates (e.g. fraiseql-db) must NOT enable it.
axum = {workspace = true, optional = true}
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {version = "0.8", default-features = false}
thiserror = {workspace = true}
toml = {workspace = true}

[features]
# Enables `impl IntoResponse for RuntimeError` and HTTP error conversion utilities.
# Enable this feature in crates that serve HTTP responses (e.g. fraiseql-server).
axum-compat = ["dep:axum"]

[lints]
workspace = true

[package]
description = "Error types for FraiseQL v2"
name = "fraiseql-error"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
