[dependencies]
fraiseql-core = {workspace = true}
fraiseql-error = {workspace = true}
serde_json = {workspace = true}

[features]
default = ["postgres"]
mysql = ["fraiseql-core/mysql"]
postgres = ["fraiseql-core/postgres"]
sqlite = ["fraiseql-core/sqlite"]
sqlserver = ["fraiseql-core/sqlserver"]
wire-backend = ["fraiseql-core/wire-backend"]

[lints]
workspace = true

[package]
description = "Query executor and ExecutorAdapter trait for FraiseQL v2"
name = "fraiseql-executor"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
