[dependencies]
chrono = {workspace = true}
deadpool = {workspace = true}
deadpool-postgres = {workspace = true}
fraiseql-db = {workspace = true, default-features = false}
fraiseql-error = {workspace = true, default-features = false}
reqwest = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["rt", "sync", "time"]}
tokio-postgres = {workspace = true}
tracing = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
serde_json = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
wiremock = "0.6"

[features]
# # Exposes test-helper constructors (e.g. `HttpEntityResolver::new_for_test`).
# # Never enable in production — these bypass security checks.
test-utils = []
# # Enable modules that are not yet production-ready.
# #
# # The following modules require the `unstable` feature:
# # - `ConnectionManager::get_or_create_connection` — direct DB connection (not yet implemented)
# #
# # These APIs may change without semver guarantees.
unstable = []

[lints]
workspace = true

[package]
description = "Apollo Federation v2 support for FraiseQL — entity resolution, saga orchestration, multi-subgraph composition"
name = "fraiseql-federation"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
