[package]
description = "Apollo Federation v2 support for FraiseQL — entity resolution, saga orchestration, multi-subgraph composition"
name = "fraiseql-federation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bench]]
harness = false
name = "federation_bench"

[dependencies]
chrono = {workspace = true}
dashmap = {workspace = true}
deadpool = {workspace = true}
deadpool-postgres = {workspace = true}
fraiseql-db = {workspace = true, default-features = false}
fraiseql-error = {workspace = true, default-features = false}
lru = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
futures = {workspace = true}
tokio = {workspace = true}
tokio-postgres = {workspace = true}
tokio-tungstenite = {workspace = true}
tracing = {workspace = true}
uuid = {workspace = true}
zeroize = "1.8"

[dev-dependencies]
# SQLite proves wired saga forward execution (#429) against a real
# `DatabaseAdapter` with no external service; Postgres backs the saga store +
# entity-mutation orchestration integration tests (`saga`, ignored).
fraiseql-db = {workspace = true, default-features = false, features = ["sqlite", "postgres"]}
chrono = {workspace = true}
criterion = {version = "0.5", features = ["html_reports"]}
proptest = {workspace = true}
serde_json = {workspace = true}
tempfile = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
wiremock = "0.6"

[features]
# # Exposes test-helper constructors (e.g. `HttpEntityResolver::new_for_test`).
# # Never enable in production — these bypass security checks.
test-utils = []
# # Enable modules that are not yet production-ready.
# #
# # The following modules require the `unstable` feature:
# # - `ConnectionManager::get_or_create_connection` — direct DB connection (not yet implemented)
# #
# # These APIs may change without semver guarantees.
unstable = []
# # Enable distributed saga execution (#429).
# #
# # Opt-in but **stable**: the API exposed by this feature is covered by semver
# # (it will not change without a major version bump). It is opt-in so that builds
# # that do not orchestrate cross-subgraph transactions are not forced to compile
# # the Postgres saga store and its dependencies.
# #
# # With it, the wired methods dispatch real mutations, persist real state, and
# # never fabricate success: forward execution (`SagaExecutor`), compensation
# # (`SagaCompensator`), crash recovery (`SagaRecoveryManager`), and the
# # `WiredSagaCoordinator` facade — including remote step dispatch over HTTPS to a
# # registered peer subgraph via `HttpMutationClient` (with optional mutual TLS),
# # and cross-subgraph `@requires` pre-fetch (a step's required fields are fetched
# # from their owning subgraph and merged into its mutation variables before
# # dispatch). The legacy fail-loud placeholder methods (`SagaCoordinator` and the
# # `SagaExecutor`/`SagaCompensator`/`SagaRecoveryManager` stubs) are `#[deprecated]`
# # and always return `SagaStoreError::NotImplemented`.
saga = []

[lints]
workspace = true
