[package]
name = "fraiseql-files"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Data handling
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = { version = "0.24", features = ["jpeg", "png", "webp"] }

# File type detection
infer = "0.15"

# MIME type guessing
mime_guess = "2"

# AWS S3 (optional)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
testing = []
aws-s3 = ["aws-sdk-s3", "aws-config"]

[lints]
workspace = true
