[package]
name = "fraiseql-functions"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
fraiseql-error.workspace = true
fraiseql-observers.workspace = true
fraiseql-core = {workspace = true, optional = true}
fraiseql-db = {workspace = true, optional = true}
fraiseql-storage = {workspace = true, optional = true}
bytes.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
trait-variant = "0.1"
chrono = {workspace = true, features = ["serde"]}
sha2.workspace = true
sqlparser = {version = "0.46", optional = true}
reqwest = {version = "0.12", optional = true}

[dev-dependencies]
tokio = {workspace = true, features = ["full"]}
wiremock = "0.6"
# Migration integration tests
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres"]}
testcontainers = {version = "0.27", features = ["watchdog"]}
testcontainers-modules = {version = "0.15", features = ["postgres"]}
criterion = { version = "0.5" }

[[bench]]
name = "functions_bench"
harness = false

[features]
runtime-wasm = ["wasmtime"]
runtime-deno = ["deno_core"]
host-live = ["fraiseql-core", "fraiseql-db", "sqlparser", "reqwest"]
host-storage = ["fraiseql-storage"]

[dependencies.wasmtime]
version = "18"
optional = true
features = ["component-model"]

[dependencies.deno_core]
version = "0.290"
optional = true

[lints]
workspace = true
