[package]
description = "Serverless functions runtime for FraiseQL — WASM and Deno backends"
name = "fraiseql-functions"
readme = "README.md"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
fraiseql-error.workspace = true
fraiseql-observers.workspace = true
fraiseql-core = {workspace = true, optional = true}
fraiseql-db = {workspace = true, optional = true}
fraiseql-storage = {workspace = true, optional = true}
bytes.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
trait-variant = "0.1"
chrono = {workspace = true}
hex.workspace = true
sha2.workspace = true
# Pure MIME/RFC5322 email parsing for the inbound email-normalization layer
# (headers, text/HTML bodies, attachments, threading). Non-optional so the
# normalization is always compiled and unit-tested in the fast lib leg; it does
# no network I/O. `full_encoding` decodes legacy charsets to UTF-8 (encoding_rs
# is already in the workspace tree).
mail-parser = {version = "0.11", default-features = false, features = ["full_encoding"]}
sqlparser = {version = "0.62", optional = true}
reqwest = {workspace = true, optional = true}

[dev-dependencies]
tokio = {workspace = true, features = ["full"]}
wiremock = "0.6"
# Migration integration tests connect through the test-support harness (env-URL first;
# optional local-testcontainers spawn). Dagger provides the Postgres service in CI.
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres"]}
fraiseql-test-support = {path = "../fraiseql-test-support"}
criterion = { version = "0.5" }

[[bench]]
name = "functions_bench"
harness = false

[features]
runtime-wasm = ["wasmtime", "wasmtime-wasi"]
runtime-deno = ["deno_core", "deno_ast"]
host-live = ["fraiseql-core", "fraiseql-db", "sqlparser", "reqwest"]
host-storage = ["fraiseql-storage"]

[dependencies.wasmtime]
version = "44"
optional = true
features = ["component-model"]

[dependencies.wasmtime-wasi]
version = "44"
optional = true

[dependencies.deno_core]
version = "0.290"
optional = true

# Real TypeScript type-stripping (runtime-deno). NOTE: deno_ast pulls swc, which
# pulls `smartstring`. smartstring adds `impl Add<SmartString> for String`, so under
# any `--all-features` build the `String + &String` idiom stops compiling (the extra
# Add impl suppresses the &String→&str deref coercion). Write `s + t.as_str()` /
# `format!(...)` instead of `s + &t` when both sides are String.
[dependencies.deno_ast]
version = "0.53"
optional = true
features = ["transpiling"]

[lints]
workspace = true
