[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0", features = ["full"]}

[dev-dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
proc-macro = true

[package]
name = "fraiseql-observers-macros"
description = "Procedural macros for automatic span creation and structured logging in fraiseql-observers"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
