[dependencies]
arrow = {version = "57", optional = true}
# NATS Dependencies
async-nats = {version = "0.40", optional = true}
async-trait = {workspace = true}
base64 = {workspace = true}
bb8 = {version = "0.8", optional = true}
bb8-tiberius = {version = "0.15", optional = true}
chrono = {workspace = true}
clap = {version = "4.5", features = ["derive"], optional = true}
colored = {version = "2.1", optional = true}
dashmap = {workspace = true}
# Arrow Flight Dependencies
fraiseql-arrow = {workspace = true, optional = true}
lettre = {workspace = true, optional = true}
futures = {workspace = true}
http = "1.1"
prometheus = {version = "0.14", optional = true}
rand = {workspace = true}
redis = {version = "0.28", features = ["aio", "connection-manager", "tokio-comp"], optional = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
# sqlx with multiple database backends (features enabled conditionally)
sqlx = {workspace = true, features = ["uuid", "chrono"]}
tabwriter = {version = "1.4", optional = true}
thiserror = {workspace = true}
# SQL Server Dependencies (tiberius - sqlx doesn't support MSSQL)
# SECURITY: use native-tls instead of rustls to avoid EOL rustls 0.21 (GHSA-6g18-jhpc-69jc)
tiberius = {version = "0.12", default-features = false, features = ["native-tls", "chrono"], optional = true}
tokio = {workspace = true, features = ["rt", "macros", "sync", "time"]}
tokio-util = {workspace = true, features = ["compat"], optional = true}
tracing = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}
fraiseql-test-utils = {path = "../fraiseql-test-utils", features = ["postgres"]}
proptest = {workspace = true}
temp-env = {workspace = true}
tokio-test = "0.4"
wiremock = "0.6"

[features]
all-db = ["postgres", "mysql", "mssql"]
analytics = ["arrow"]
# Arrow Features
arrow = ["fraiseql-arrow", "dep:arrow"]
caching = ["redis"]
checkpoint = []
cli = ["dep:clap", "dep:colored", "dep:tabwriter"]
dedup = ["redis"]
# Default features (PostgreSQL for backward compatibility)
default = ["postgres"]
# Email via SMTP (lettre)
email = ["lettre"]
# Descriptive bundles
enterprise = ["checkpoint", "dedup", "caching", "queue", "search", "metrics"]
metrics = ["prometheus"]
# SQL Server uses tiberius crate (sqlx doesn't support MSSQL in v0.8)
mssql = ["tiberius", "tokio-util", "bb8", "bb8-tiberius"]
# Multi-Database Features
multi-db = ["postgres", "mysql"]
mysql = ["sqlx/mysql"]
# NATS Features
nats = ["async-nats"]
# Database backends (enable sqlx features)
postgres = ["sqlx/postgres"]
queue = ["redis"]
redis-lease = ["redis"]
search = []
sqlite = ["sqlx/sqlite"]
testing = []

[lints]
workspace = true

[package]
description = "Observer system for reactive business logic in FraiseQL v2"
name = "fraiseql-observers"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
